--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -23,7 +23,7 @@
 	<realm-name>jdbc-security-domain</realm-name>
 	<form-login-config>
 		<form-login-page>/faces/login.xhtml</form-login-page>
-		<form-error-page>/faces/login.xhtml</form-error-page>
+		<form-error-page>/faces/loginError.xhtml</form-error-page>
 	</form-login-config>
 </login-config>
 
@@ -56,5 +56,14 @@
 <security-role>
 	<role-name>ADMIN</role-name>
 </security-role>
+ 
+	<filter>
+        <filter-name>PostLoginFilter</filter-name>
+        <filter-class>WebShop.filters.PostLoginFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>PostLoginFilter</filter-name>
+        <url-pattern>/faces/j_security_check</url-pattern>
+    </filter-mapping>
  
 </web-app>
